--- a/ready-to-do/clean-code.css
+++ b/ready-to-do/clean-code.css
@@ -319,12 +319,12 @@ template {
    cursor:not-allowed
 }  
 .pkp_button_offset {
-   color:#ff4040
+   color:#fe473c
 }
 .pkp_button_offset:hover,
 .pkp_button_offset:focus {
-   border-color:#ff4040;
-   color:#ff4040
+   border-color:#fe473c;
+   color:#fe473c
 }
 .pkp_button_offset:disabled,
 .pkp_button_offset:disabled:hover {
@@ -583,7 +583,7 @@ template {
 }
 .pkp_helpers_debug,
 .pkp_helpers_debug div {
-   border:1px dashed #f00;
+   border:1px dashed #fe473c;
    padding:2px
 }
 .pkp_helpers_flatlist {
@@ -723,7 +723,7 @@ template {
    left:0.5em;
    bottom:11px;
    padding:0 .5em;
-   background:#ff4040;
+   background:#fe473c;
    border-bottom-left-radius:3px;
    border-bottom-right-radius:3px;
    font-size:.93rem;
@@ -742,7 +742,7 @@ template {
    font-style:italic
 }
 .cmp_form .label .required {
-   color:#ff4040
+   color:#fe473c
 }
 .cmp_form input[type="text"],
 .cmp_form input[type="email"],
@@ -770,7 +770,7 @@ template {
    padding:0 .5em;
    font-weight:700;
    font-size:.93rem;
-   background:#ff4040;
+   background:#fe473c;
    color:#fff
 }
 .cmp_form label>input[type="checkbox"],
@@ -878,7 +878,7 @@ template {
    font-style:italic
 }
 .cmp_search_filter .delete {
-   color:#ff4040
+   color:#fe473c
 }
 .cmp_notification {
    display:block;
@@ -894,7 +894,7 @@ template {
    border-color:#00b24e
 }
 .cmp_notification .no {
-   border-color:#ff4040
+   border-color:#fe473c
 }
 .cmp_breadcrumbs {
    display:inline-block
@@ -2064,13 +2064,13 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
 .pkp_search_desktop .search_prompt:focus {
    outline:0;
    padding-bottom:8px;
-   border-bottom:2px solid #ff4040
+   border-bottom:2px solid #fe473c
 }
 .pkp_search .search_cancel:hover,
 .pkp_search .search_cancel:focus {
    outline: none;
    border-radius: 50%;
-   background: #ff4040;
+   background: #fe473c;
    color: #fff;
 }
 .pkp_search .search_cancel {
@@ -2111,7 +2111,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
 }
 .pkp_search_desktop.is_open .search_prompt:hover,
 .pkp_search_desktop.is_open .search_prompt:focus {
-   border-bottom: 2px solid #ff4040;
+   border-bottom: 2px solid #fe473c;
    padding-bottom: 8px
 }
 .pkp_search_desktop.is_searching input[type="text"] {
@@ -2298,7 +2298,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
 .page_lost_password .pkp_form_error {
    margin:1.43rem 0;
    padding:.714rem;
-   background:#ff4040;
+   background:#fe473c;
    color:#fff;
    font-size:.93rem;
    font-weight:700
@@ -2372,7 +2372,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
 .page_register #formErrors {
    margin:1.43rem 0;
    padding:.714rem;
-   background:#ff4040;
+   background:#fe473c;
    color:#fff
 }
 .page_register #formErrors .pkp_form_error {
@@ -2751,7 +2751,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
    top:2.143rem;
    width:100%;
    height:4.286rem;
-   background:#ff4040
+   background:#fe473c
 }
 .galley_view .galley_view_notice_message {
    position:absolute;
@@ -3765,7 +3765,7 @@ body[dir="rtl"] .obj_issue_toc .galleys_links li {
    text-transform:uppercase;
    background:#fe473c;
    color:#fff;
-   border:none;
+   border:1px solid #fe473c;
    transition: 0.5s;
 }
 .cmp_manuscript_button:hover,
@@ -3774,9 +3774,10 @@ body[dir="rtl"] .obj_issue_toc .galleys_links li {
 .block_make_submission a:focus,
 .obj_galley_link:hover,
 .obj_galley_link:focus {
-   background:#ddd;
-   color: #f00;
+   background:#fff;
+   color: #fe473c;
    border-radius: 15px;
+   border: 1px solid;
    transition: 0.5s;
 }
 .cmp_breadcrumbs {
