--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -4434,6 +4434,10 @@ body[dir="rtl"] .pkp_structure_sidebar::before {
 	animation-timing-function: cubic-bezier(.26,.53,.74,1.48);
 	animation-fill-mode: backwards;
 }
+.summary img:hover {
+   transform: translate(0px, -10px);
+   opacity: 1.0
+}
 
 /* Slide In */
 
