--- a/ready-to-do/clean-code.css
+++ b/ready-to-do/clean-code.css
@@ -1299,7 +1299,7 @@ img {
    text-align: center;
    font-size: 0.857rem;
    position: relative;
-   top: 0.3rem;
+   top: 0;
 }
 .pkp_navigation_user > li > a .task_count {
    display: none;
@@ -1459,9 +1459,9 @@ img {
    .pkp_navigation_primary > li:first-child a {
        margin-left: -0.5em;
    }
-   .pkp_navigation_primary > li:last-child a {
+   /* .pkp_navigation_primary > li:last-child a {
        margin-right: -0.5em;
-   }
+   } */
    .pkp_navigation_primary > li:hover ul {
        left: 1rem;
    }
@@ -1521,6 +1521,7 @@ img {
        outline: 0;
        background: rgba(0, 0, 0, 0.84);
        color: #fe473c;
+       border-radius: 15px;
    }
    .pkp_navigation_user ul {
        width: 10em;
@@ -3926,7 +3927,21 @@ body[dir="rtl"] .obj_issue_toc .galleys_links li {
    #navigationPrimary ul a:hover,
    #navigationPrimary ul a:focus {
        border-color: transparent;
+       background:#ffcc40;
+       border-radius: 15px;
    }
+}
+.pkp_nav_list ul {
+   position: absolute;
+   top: 100%;
+   left: -9999px;
+   z-index: 1000;
+   width: 15em;
+   margin: 0;
+   padding: 0;
+   background: #fff;
+   border-radius: 15px;
+   box-shadow: 5px 5px 15px rgba(57, 57, 57, 0.55);
 }
 .pkp_navigation_search_wrapper a {
    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", sans-serif;
@@ -3974,6 +3989,7 @@ body[dir="rtl"] .obj_issue_toc .galleys_links li {
    }
    .pkp_navigation_user > li > a {
        color: rgba(240, 240, 240);
+       width: 125px;
    }
 }
 .pkp_block .title {
