--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -1,4 +1,4 @@
-/*! folha-de-estilo.css v1.8.1 | mapeamento-de-código v0.4.1 | CC4.0 License | github.com/iKalamaZoo */
+/*! folha-de-estilo.css v1.9.1 | mapeamento-de-código v0.5.1 | CC4.0 License | github.com/iKalamaZoo */
 html {
    line-height: 1.15;
    -ms-text-size-adjust: 100%;
@@ -1313,7 +1313,7 @@ img {
    text-align: center;
    font-size: 0.857rem;
    position: relative;
-   top: 0.3rem;
+   top: 0rem;
 }
 .pkp_navigation_user > li > a .task_count {
    display: none;
@@ -1477,9 +1477,9 @@ img {
    .pkp_navigation_primary > li:first-child a {
        margin-left: -0.5em;
    }
-   .pkp_navigation_primary > li:last-child a {
+   /* .pkp_navigation_primary > li:last-child a {
        margin-right: -0.5em;
-   }
+   } */
    .pkp_navigation_primary > li:hover ul {
        left: 1rem;
    }
@@ -1540,6 +1540,7 @@ img {
        outline: 0;
        background: rgba(0, 0, 0, 0.84);
        color: #fe473c;
+       border-radius: 15px;
    }
    .pkp_navigation_user ul {
        width: 10em;
@@ -3990,12 +3991,27 @@ body[dir="rtl"] .obj_issue_toc .galleys_links li {
    #navigationPrimary ul a {
        color: rgba(240, 240, 240);
    }
-   /*! ALTERA A LINHA DA ESQUERDA DO SUBMENU QUANDO O MOUSE REPOUSA NO OBJETO */
+   /*! ALTERA A COR DO SUBMENU QUANDO O MOUSE REPOUSA NO OBJETO */
    #navigationPrimary ul a:hover,
    #navigationPrimary ul a:focus {
        border-color: transparent;
+       background:#ffcc40;
+       border-radius: 15px;
    }
 }
+   /*! ALTERA AS BORDAS DO SUBMENU QUANDO ELE ESTÁ ATIVO */
+.pkp_nav_list ul {
+   position: absolute;
+   top: 100%;
+   left: -9999px;
+   z-index: 1000;
+   width: 15em;
+   margin: 0;
+   padding: 0;
+   background: #fff;
+   border-radius: 15px;
+   box-shadow: 5px 5px 15px rgba(57, 57, 57, 0.55);
+  }
 .pkp_navigation_search_wrapper a {
    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", sans-serif;
    font-size: 0.93rem;
@@ -4044,6 +4060,7 @@ body[dir="rtl"] .obj_issue_toc .galleys_links li {
    /*! ALTERA A COR DO NOME DE USUÁRIO NO CANTO SUPERIOR DIREITO DO HEADER */
    .pkp_navigation_user > li > a {
        color: rgba(240, 240, 240);
+       width: 125px;
    }
 }
 /*! ALTERA AS CORES DA LINHA INFERIOR DOS TÍTULOS DA BARRA LATERAL */
