--- a/ready-to-do/clean-code.css
+++ b/ready-to-do/clean-code.css
@@ -4515,7 +4515,7 @@ body[dir="rtl"] .obj_issue_toc .galleys_links li {
    }
 }
 
-.obj_article_summary {
+/* .obj_article_summary {
    background: #e3e1e1;
    padding-top: 0.5em;
    padding-left: 1em;
@@ -4532,3 +4532,5 @@ body[dir="rtl"] .obj_issue_toc .galleys_links li {
     border-radius: 5px;
     ! transition: all 0.5s ease-in;
  }
+ 
+ */
