--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -4577,7 +4577,7 @@ body[dir="rtl"] .obj_issue_toc .galleys_links li {
 
 /* AJUSTA A COR DE FUNDO DA CAIXA DA LISTA DOS ARTIGOS PUBLICADOS */
 
-.obj_article_summary {
+/* .obj_article_summary {
    background: #e3e1e1;
    padding-top: 0.5em;
    padding-left: 1em;
@@ -4594,3 +4594,5 @@ body[dir="rtl"] .obj_issue_toc .galleys_links li {
     border-radius: 5px;
     ! transition: all 0.5s ease-in;
  }
+
+ */
