--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -1286,7 +1286,7 @@ img {
 /*! ALTERA A COR DO TÍTULO DE BUSCA QUANDO O MOUSE REPOUSA NO OBJETO */
 .pkp_site_nav_menu a:hover,
 .pkp_site_nav_menu a:focus {
-   color: rgba(0, 0, 0, 0.84);
+   color: #4b7d92;
    text-decoration: none;
 }
 .pkp_site_nav_menu #siteNav {
@@ -2051,7 +2051,7 @@ body.navIsOpen .siteHeader__navToggleIcon > span:last-child {
        top: 0;
        right: 0;
        height: 40px;
-       min-width: 100px;
+       min-width: 80px;
        padding: 0;
        font-size: 14px;
        line-height: 20px;
