--- a/ready-to-do/clean-code.css
+++ b/ready-to-do/clean-code.css
@@ -3959,6 +3959,7 @@ body[dir="rtl"] .obj_issue_toc .galleys_links li {
    .pkp_navigation_search_wrapper a:focus {
        color: #4b7d92;
        border-color: #fe473c;
+       background: transparent;
    }
 }
 .pkp_navigation_user_wrapper a {
