--- a/ready-to-do/global-control.css
+++ b/ready-to-do/global-control.css
@@ -3770,6 +3770,7 @@ body {
    .pkp_navigation_search_wrapper a:focus {
        color: #4b7d92;
        border-color: #fe473c;
+       background: transparent;
    }
 }
 .pkp_navigation_user_wrapper a {
