--- a/ready-to-do/normalize.css
+++ b/ready-to-do/normalize.css
@@ -3772,6 +3772,7 @@ body {
    .pkp_navigation_search_wrapper a:focus {
        color: #4b7d92;
        border-color: #0a0;
+       background: transparent;
    }
 }
 .pkp_navigation_user_wrapper a {
